# real-world-evidence-studio

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml
.github/: RELEASE_CHECKLIST.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: concept_sets.yml  study_defaults.yml
docs/: architecture.md  data_dictionary.md  data_setup.md  demo_script.md  future_roadmap.md  interview_talking_points.md  limitations.md  methodology.md  omop_mapping.md  testing.md
scripts/: generate_demo_data.py
src/evidence_studio/: __init__.py  __main__.py  analysis.py  audit.py  cli.py  cohort.py  concepts.py  config.py  data_quality.py  database.py  ingestion.py  reporting.py  statistics.py
src/evidence_studio/ui/: __init__.py  components.py
src/evidence_studio/ui/pages/: __init__.py  cohort_attrition.py  data_quality.py  evidence_brief.py  methodology.py  overview.py  results.py  sql_audit.py  study_designer.py
templates/: evidence_brief.md.j2
tests/fixtures/: conditions.csv  encounters.csv  medications.csv  observations.csv  patients.csv
tests/unit/: test_analysis.py  test_analysis_edge_cases.py  test_categorical_predictor_warnings.py  test_cohort.py  test_cohort_boundaries.py  test_concepts.py  test_config.py  test_data_source_labeling.py  test_data_source_provenance.py  test_ingestion.py  test_ingestion_edge_cases.py  test_regression_variance.py  test_reporting.py  test_ui_components.py
