[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evidence-studio"
version = "0.1.0"
description = "Real-World Evidence Studio — synthetic EHR analytics portfolio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36",
    "duckdb>=1.0",
    "pandas>=2.0",
    "plotly>=5.20",
    "statsmodels>=0.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "pyarrow>=15.0",
    "scipy>=1.11",
    "markdown>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
evidence-studio = "evidence_studio.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/evidence_studio"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "UP006", "UP007", "UP017", "UP035", "UP045"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:cacheprovider"
